8295974: jni_FatalError and Xcheck:jni warnings should print the native stack when there are no Java frames