src/hotspot/share/runtime/javaThread.cpp
@@ -1676,44 +1676,22 @@ oop JavaThread::current_park_blocker() {
 }
 
 // Print stack trace for checked JNI warnings and JNI fatal errors.
-// This is the external format from above, but selecting the platform
-// or vthread as applicable, and allowing for a native-only stack.
+// This is the external format, selecting the platform or vthread
+// as applicable, and allowing for a native-only stack.
 void JavaThread::print_jni_stack() {
   if (!has_last_Java_frame()) {
     assert(this == JavaThread::current(), "Can't print native stack of other threads");
     ResourceMark rm(this);
     char* buf = NEW_RESOURCE_ARRAY_RETURN_NULL(char, O_BUFLEN);
     if (buf == nullptr) {
-      tty->print_cr("Unable to print native stack");
+      tty->print_cr("Unable to print native stack - out of memory");
       return;
     }
-    if (!UseNewCode){
-    int count = 0;
-    for (frame f = os::current_frame();
-         count++ < StackPrintLimit;
-        f = os::get_sender_for_C_frame(&f)) {
-      f.print_C_frame(tty, buf, O_BUFLEN, f.pc());
-      if (f.pc()) { // print source file and line, if available
-        char filename[128];
-        int line_no;
-        if (Decoder::get_source_info(f.pc(), filename, sizeof(filename),
-                                     &line_no, true /* is_pc_after_call */)) {
-          tty->print("  (%s:%d)", filename, line_no);
-        }
-      }
-      tty->cr();
-      if (os::is_first_C_frame(&f)) {
-        break;
-      }
-    }
-    } else {
-      frame f = os::current_frame();
-      VMError::print_native_stack(tty, f, this, true /*print_source_info */, -1, buf, O_BUFLEN);
-    }
-  } else if (is_vthread_mounted()) {
-    print_vthread_stack_on(tty);
+    frame f = os::current_frame();
+    VMError::print_native_stack(tty, f, this, true /*print_source_info */,
+                                -1 /* max stack */, buf, O_BUFLEN);
   } else {
-    print_stack_on(tty);
+    print_active_stack_on(tty);
   }
 }
 
